--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,7 @@
 
   <groupId>org.talend.sdk.component</groupId>
   <artifactId>component-runtime</artifactId>
-  <version>1.1.6</version>
+  <version>1.1.6.1-SNAPSHOT</version>
   <packaging>pom</packaging>
 
   <name>Component Runtime</name>
